<resources>
    <string name="app_name">Tour Guide</string>

    <string name="bishkek_guide">BISHKEK GUIDE</string>

    <string name="cafe">Рестораны</string>
    <string name="fitness_center">Фитнесс центры</string>
    <string name="cinemas">Кинотеатры</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="silla_name">Silla</string>
    <string name="silla_address">Юнусалиева, 147</string>
    <string name="silla_time">Daily 10.00 – 00.00</string>
    <string name="silla_distance">3km</string>
    <string name="silla_price">Средний чек - 1500</string>
    <string name="silla_description">Идеальное место для любителей дорам и корейской кухни.
        Ресторан известен благодаря уютному интерьеру с азиатскими акцентами и корейскому барбекю.
        В основном меню несколько разновидностей куксу, токпоки, рамен и другие традиционные блюда корейской кухни.
        Пространство ресторана — это летняя площадка, уютные кабинки и два банкетных зала для крупных торжеств.</string>

    <string name="zerno_name">Zerno</string>
    <string name="zerno_address">Турусбекова, 31</string>
    <string name="zerno_time">Daily 10.00 – 23.00</string>
    <string name="zerno_distance">2km</string>
    <string name="zerno_price">Средний чек - 2000</string>
    <string name="zerno_description">Специалитеты - это фирменные блюда Zerno, на которых они специализируемся в первую очередь.
        Заведение приглашает всех желающих на дегустацию, чтобы продемонстрировать главные фишки заведения,
        а также передать частичку философию ресторана. У вас будет возможность попробовать каждую позицию в меню
        и дать свои впечатления и отзывы по ним. В ресторане можно увидеть открытую шоу-кухню,
        на которой происходит магия прямо перед глазами. Меню ресторана представлено блюдами современной континентальной и локальной гастрономии,
        а также аутентичной картой травяных отваров, сборов и дикоросов. Для приготовления используются только 100% натуральные, экологичные,
        сезонные ингредиенты от фермеров, рыбаков, охотников и собирателей.
</string>

    <string name="turkuaz_name">Turkuaz</string>
    <string name="turkuaz_address">Токомбаева, 37/6</string>
    <string name="turkuaz_time">Daily 12.00 – 00.00</string>
    <string name="turkuaz_distance">5km</string>
    <string name="turkuaz_price">Средний чек - 2000</string>
    <string name="turkuaz_description">Новый турецкий ресторан в городе Бишкек, готов вас радовать наивкуснейшими изысканными блюдами,
        непередаваемый вкус Аданы-кебаб и конечно фирменные деликатесы не оставят вас равнодушными.
        Все сочетания вкуса и уюта в чудесном саду ресторана. Обязательно для посещения всех гурманов.
        А атмосфера и интерьер порадует любого посетителя, посередине главного зала, горят поленья создавая уют и тепло.
        Также во время теплых сезонов, открыт летний сад, где вы точно проведете самые прекрасные вечера.
        Аутентичная турецкая кухня. Профессиональные повара из турецкого г. Адана.
        Можно провести банкеты, удобное расположение, много парковочных мест, есть отдельный зал для курящих. </string>

    <string name="bruno_name">BRUNO coffee &amp; Tea room</string>
    <string name="bruno_address">Аалы Токомбаева, 21/1</string>
    <string name="bruno_time">Daily 09.00 – 24.00</string>
    <string name="bruno_distance">5.5km</string>
    <string name="bruno_price">Средний чек - 1000</string>
    <string name="bruno_description">Ресторан «BRUNO coffee &amp; Tea room» - это отличный интерьер,
        качественная и вежливая работа официантов, вкусные блюда и красивая подача.
        Напитки, а особенно горячий шоколад приятный и насыщенный.
        Отдельно хотели бы подчеркнуть профессионализм шеф повара, было очень вкусно и незабываемо.
        Стейк на углях и пицца на высоте. Цены демократичны и приятны на глаз. Также есть детское меню,
        посуда и игрушки, есть чем занять детей. </string>

    <string name="iwa_name">IWA</string>
    <string name="iwa_address">Киевская, 148</string>
    <string name="iwa_time">Daily 17.00 – 02.00</string>
    <string name="iwa_distance">1.5km</string>
    <string name="iwa_price">Средний чек - 2000</string>
    <string name="iwa_description">«IWA. ROOFBAR-RESTAURANT» – это уникальное место, где продумана каждая деталь:
        панорамный̆ вид на город и горы, непревзойденный̆ комфорт и дальневосточная кухня.
        Понаблюдать за Бишкеком с самой высокой точки в городе, насладиться вкусной и неповторимой кухней и
        полюбоваться самым захватывающим закатом в городе вы сможете только в IWA. ROOFBAR-RESTAURANT.
        Одной из основных задач для создания неповторимого концепта заведения являлась разработка эксклюзивного меню.
        Команда «IWA» хотела привнести в гастрономическую жизнь города неповторимые нотки японской и современной
        дальневосточной кухни в оригинальной интерпретации.
    </string>
    <string name="name_of_place">Name of place</string>
    <string name="address_of_place">Address of place</string>
    <string name="open_time">Open time</string>
    <string name="distance">distance</string>

    <string name="dasmia_name">Dasmia</string>
    <string name="dasmia_address"> ул. Анкара, 2б</string>
    <string name="dasmia_time">Daily 07.00 – 23.00</string>
    <string name="dasmia_distance">5km</string>
    <string name="dasmia_price">Годовой от 70000</string>
    <string name="dasmia_description">Один из самых больших фитнес-клубов в Бишкеке премиального класса,
        соответствующий мировым стандартам в этом сегменте.
        Направления:
        пилатес
        йога
        степ-аэробика
        силовые тренировки
        функциональные  тренировки
        бассейн
        Также есть 4 финские сауны, турецкая парная (хаммам), массаж, зона отдыха с шезлонгами,
        услуги салона красоты, фитобары, детский фитнес-клуб.</string>

    <string name="world_class_name">World Class</string>
    <string name="world_class_address">ул. Жукеева-Пудовкина, 87/2</string>
    <string name="world_class_time">Daily 07.00 – 23.00</string>
    <string name="world_class_distance">3km</string>
    <string name="world_class_price">Годовой от 40000</string>
    <string name="world_class_description">World Class Бишкек – первый клуб знаменитой сети World Class,
        открытый в столице Кыргызстана. Первый фитнес-клуб премиум-класса оснащен самым современным спортивным оборудованием,
        а команда тренеров собрана из лучших спортсменов Кыргызстана.</string>
    <string name="tsum_title">TSUM Cinema</string>
    <string name="tsum_address">Шопокова, 91</string>
    <string name="tsum_time">Daily 10.00 – 00.00</string>
    <string name="tsum_distance">2km</string>
    <string name="tsum_price">500 сом</string>
    <string name="tsum_description">В кинотеатре действуют четыре кинозала. Для искушенных киноманов -
        VIP-зал с раскладывающимися креслами для максимального расслабления. VIP-зал можно забронировать целиком
        и посмотреть кино только с друзьями или коллегами. Во всех залах установлены сиденья повышенной комфортности.
        Это создает впечатление, что вы расположились в кресле престижного авто.
        Кстати, между рядами тоже достаточно места, что позволит спокойно вытянуть ноги, никому не мешая.</string>

    <string name="broadway_description">Кинотеатр Broadway является одним из самых больших мультиплексов в Кыргызстане,
        где установлен также самый большой парящий серебряный экран. Для зрителей работают семь кинозалов,
        где ежедневно демонстрируются лучшие хиты мирового и отечественного кинопроката.
        Для постоянных посетителей кинотеатра действуют различные акции и предложения.
        Перед сеансом вы также сможете порадовать себя закусками и напитками в кинобаре,
        а затем отправиться в увлекательный мир приключений на экране.</string>
    <string name="broadway_title">Broadway</string>
    <string name="broadway_address">ул. Айтматова, 3</string>
    <string name="broadway_time">Daily 09.00 - 00.00</string>
    <string name="broadway_distance">1.5km</string>
    <string name="broadway_price">500 сом</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dasmia_location">70000001035856292</string>
    <string name="world_class_location">70000001026011392</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cinema_tsum">Кинотеатр  TSUM Cinema</string>
    <string name="cinema_broadway">Кинотеатр Broadway</string>
    <string name="tsum_location">70000001040950307</string>
    <string name="broadway_location">70000001029043839</string>
    <string name="dasmia_info">Спортивный зал Dasmia</string>
    <string name="world_class_info">Спортивный зал World Class</string>
    <string name="silla_info">Ресторан корейской кухни</string>
    <string name="zerno_info">Ресторан, кофейня, лавка</string>
    <string name="turkuaz_info">Ресторан турецкой кухни</string>
    <string name="bruno_info"><![CDATA[Coffee & Tea Room]]></string>
    <string name="iwa_info">Ресторан на крыше</string>
    <string name="silla_location">70000001020099949</string>
    <string name="zerno_location">70000001057692093</string>
    <string name="turkuaz_location">70000001063233370</string>
    <string name="bruno_location">70000001042522057</string>
    <string name="iwa_location">70000001042571832</string>
    <string name="address">Address</string>
    <string name="title">Title</string>
    <string name="working_time">Working Time</string>
    <string name="distance_detail">Distance</string>
    <string name="average_check">Average Check</string>
    <string name="additional_information">Additional Information</string>
    <string name="description">Description</string>
    <string name="tsum_conatct">+996500000005</string>
    <string name="broadway_contact">+996709777733</string>
    <string name="dasmia_contact">+996558399152</string>
    <string name="world_class_contact">+996554979977</string>
    <string name="silla_contaact">+996558399898</string>
    <string name="zerno_contact">+996220088675</string>
    <string name="turkuaz_contact">+996557953737</string>
    <string name="bruno_contact">+996770227227</string>
    <string name="iwa_contact">+996999535353</string>
</resources>