<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailFragment">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="-25dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@drawable/tsum"
            tools:ignore="ContentDescription">
        </ImageView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detail_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="45dp"
                android:text="@string/address"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/title"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/detail_address"
                app:layout_constraintStart_toStartOf="@+id/detail_address" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:minHeight="48dp"
                android:src="@drawable/back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:cardCornerRadius="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/detail_workingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/working_time"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/detail_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="82dp"
                android:layout_marginEnd="16dp"
                android:text="@string/distance_detail"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_workingTime"
                app:layout_constraintTop_toTopOf="@+id/detail_workingTime" />

            <TextView
                android:id="@+id/detail_averageCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:text="@string/average_check"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/detail_workingTime"
                app:layout_constraintTop_toBottomOf="@+id/detail_workingTime" />

            <TextView
                android:id="@+id/detail_additionalInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/additional_information"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/detail_averageCheck"
                app:layout_constraintTop_toBottomOf="@+id/detail_averageCheck" />

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/description"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/detail_additionalInformation"
                app:layout_constraintTop_toBottomOf="@+id/detail_additionalInformation"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>