<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/image_holder"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="15dp">

            <ImageView
                android:id="@+id/place_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:text="@string/name_of_place"
            android:textSize="18sp"
            android:textColor="@color/nameOfPlace"
            app:layout_constraintStart_toEndOf="@+id/image_holder"
            app:layout_constraintTop_toTopOf="@+id/image_holder">

        </TextView>

        <TextView
            android:id="@+id/place_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/address_of_place"
            android:textColor="@color/address_color"
            app:layout_constraintStart_toStartOf="@+id/place_name"
            app:layout_constraintTop_toBottomOf="@+id/place_name" />

        <TextView
            android:id="@+id/place_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_time"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/image_holder"
            app:layout_constraintStart_toStartOf="@+id/place_address" />

        <TextView
            android:id="@+id/place_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/distance"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/place_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_address" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>